# crazy

./: .gitignore  CMakeLists.txt  README.md
_codeql_build_dir/: CMakeCache.txt  Makefile  cmake_install.cmake
_codeql_build_dir/examples/glfw/: Makefile  cmake_install.cmake
_codeql_build_dir/src/: Makefile  cmake_install.cmake  crazy_app
cmake/: README.md
docs/bridge-node-embed/: README.md
docs/wrappers/: README.md
examples/bridge-node-embed/: CMakeLists.txt  main.cpp  script.js
examples/glfw/: CMakeLists.txt  main.cpp
examples/wrappers/: CMakeLists.txt  main.cpp  simple_test.cpp
include/crazy/: Application.hpp  EventHandler.hpp  Renderer.hpp  Window.hpp
src/: CMakeLists.txt  main.cpp
src/crazy/: Application.cpp  EventHandler.cpp  Renderer.cpp  Window.cpp
